--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -385,6 +385,62 @@
       "internal_tag_ids": [],
       "content_type_asset_preview": null,
       "component_group_name": "Nestable blocks"
+    },
+    {
+      "name": "text_icon_section",
+      "display_name": null,
+      "description": "",
+      "created_at": "2025-02-27T20:47:05.112Z",
+      "updated_at": "2025-02-28T11:33:54.180Z",
+      "id": 7018405,
+      "schema": {
+        "description": {
+          "type": "richtext",
+          "pos": 0,
+          "id": "hJIgdGMWTZGqQyGyDpI_Og"
+        },
+        "link_icons": {
+          "type": "option",
+          "pos": 1,
+          "use_uuid": true,
+          "options": [
+            {
+              "_uid": "48eef42f-5892-45ef-a860-ef465dda280b",
+              "name": "arrow",
+              "value": "arrow"
+            },
+            {
+              "_uid": "694e2432-a2e5-461a-9dfe-4bf171ed14bc",
+              "value": "star",
+              "name": "star"
+            }
+          ],
+          "default_value": "arrow",
+          "id": "0ZFM3qd3REe1yKci4YJvIQ"
+        },
+        "icons_link": {
+          "type": "multilink",
+          "pos": 2,
+          "show_anchor": true,
+          "allow_target_blank": true,
+          "id": "Ith4xmvmRz6ya2NIfMSFkA"
+        }
+      },
+      "image": null,
+      "preview_field": null,
+      "is_root": false,
+      "preview_tmpl": null,
+      "is_nestable": true,
+      "all_presets": [],
+      "preset_id": null,
+      "real_name": "text_icon_section",
+      "component_group_uuid": "46060bef-a421-41d9-9c44-567227184725",
+      "color": "#2db47d",
+      "icon": null,
+      "internal_tags_list": [],
+      "internal_tag_ids": [],
+      "content_type_asset_preview": null,
+      "component_group_name": "Nestable blocks"
     }
   ],
   "component_groups": [
