--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -387,43 +387,27 @@
       "component_group_name": "Nestable blocks"
     },
     {
-      "name": "text_icon_section",
+      "name": "text_icon",
       "display_name": null,
       "description": "",
-      "created_at": "2025-02-27T20:47:05.112Z",
-      "updated_at": "2025-02-28T11:33:54.180Z",
-      "id": 7018405,
+      "created_at": "2025-02-28T15:09:47.719Z",
+      "updated_at": "2025-02-28T15:11:12.211Z",
+      "id": 7024006,
       "schema": {
         "description": {
           "type": "richtext",
           "pos": 0,
-          "id": "hJIgdGMWTZGqQyGyDpI_Og"
-        },
-        "link_icons": {
-          "type": "option",
-          "pos": 1,
-          "use_uuid": true,
-          "options": [
-            {
-              "_uid": "48eef42f-5892-45ef-a860-ef465dda280b",
-              "name": "arrow",
-              "value": "arrow"
-            },
-            {
-              "_uid": "694e2432-a2e5-461a-9dfe-4bf171ed14bc",
-              "value": "star",
-              "name": "star"
-            }
-          ],
-          "default_value": "arrow",
-          "id": "0ZFM3qd3REe1yKci4YJvIQ"
+          "required": true,
+          "max_length": 500,
+          "id": "YyBYrZOSReWBYMtHgEkdZw"
         },
         "icons_link": {
           "type": "multilink",
-          "pos": 2,
+          "pos": 1,
+          "required": true,
           "show_anchor": true,
           "allow_target_blank": true,
-          "id": "Ith4xmvmRz6ya2NIfMSFkA"
+          "id": "ol1L4e1mTRmFlNAc3xry0g"
         }
       },
       "image": null,
@@ -433,7 +417,7 @@
       "is_nestable": true,
       "all_presets": [],
       "preset_id": null,
-      "real_name": "text_icon_section",
+      "real_name": "text_icon",
       "component_group_uuid": "46060bef-a421-41d9-9c44-567227184725",
       "color": "#2db47d",
       "icon": null,
