--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -391,16 +391,9 @@
       "display_name": null,
       "description": "",
       "created_at": "2025-02-28T15:09:47.719Z",
-      "updated_at": "2025-02-28T15:30:13.232Z",
+      "updated_at": "2025-03-10T10:32:55.829Z",
       "id": 7024006,
       "schema": {
-        "description": {
-          "type": "richtext",
-          "pos": 0,
-          "required": true,
-          "max_length": 500,
-          "id": "YyBYrZOSReWBYMtHgEkdZw"
-        },
         "link_icons": {
           "type": "asset",
           "pos": 1,
@@ -408,6 +401,13 @@
             "images"
           ],
           "id": "9W6oAgXWROWfIdfiPRDkEA"
+        },
+        "description": {
+          "type": "text",
+          "pos": 1,
+          "required": true,
+          "translatable": true,
+          "id": "xxg4MQ-tT3ugCb25CY2CvQ"
         }
       },
       "image": null,
