--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-var": "^1.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "postcss": "^8",
     "storyblok-generate-ts": "^2.1.0",
     "tailwindcss": "^3.4.1",
