--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@storyblok/react": "^4.4.0",
+    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
     "dotenv-cli": "^8.0.0",
     "next": "15.1.7",
