--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -5,7 +5,7 @@
       "display_name": null,
       "description": "",
       "created_at": "2025-02-26T16:45:58.905Z",
-      "updated_at": "2025-03-20T08:32:02.064Z",
+      "updated_at": "2025-03-20T09:20:20.386Z",
       "id": 7012617,
       "schema": {
         "title": {
@@ -34,14 +34,9 @@
               "value": "default"
             },
             {
-              "_uid": "e6510a6a-63e3-4eb6-98ba-a5184420c6b1",
-              "value": "light",
-              "name": "light"
-            },
-            {
-              "_uid": "25c61ccf-a607-401a-9552-fcabff033289",
-              "value": "highlight",
-              "name": "highlight"
+              "_uid": "c2ff63dd-9349-49f7-8066-dcb7b6351366",
+              "value": "borderless",
+              "name": "borderless"
             }
           ],
           "id": "jsfUpg5sT16LAIjY0b4t7w"
@@ -57,17 +52,23 @@
               "value": "default"
             },
             {
+              "_uid": "4a902ef1-8081-46fe-8c6a-4308f406df62",
+              "value": "highlight",
+              "name": "highlight"
+            },
+            {
               "_uid": "b2d2bf69-54d3-4ec7-b1c0-04581a1fddc6",
               "value": "light",
               "name": "light"
             },
             {
-              "_uid": "4a902ef1-8081-46fe-8c6a-4308f406df62",
-              "value": "highlight",
-              "name": "highlight"
+              "_uid": "8c37b3cb-2b65-425a-8470-22307bd24527",
+              "value": "",
+              "name": ""
             }
           ],
-          "id": "Ih7pjgzlToaY7ajd---QCQ"
+          "id": "Ih7pjgzlToaY7ajd---QCQ",
+          "default_value": "default"
         }
       },
       "image": null,
