--- a/src/storyblok/components.326651.json
+++ b/src/storyblok/components.326651.json
@@ -447,7 +447,7 @@
       "display_name": null,
       "description": null,
       "created_at": "2025-02-21T09:40:01.838Z",
-      "updated_at": "2025-03-17T13:16:24.083Z",
+      "updated_at": "2025-03-21T13:11:11.218Z",
       "id": 6990886,
       "schema": {
         "background_option": {
@@ -465,6 +465,11 @@
               "_uid": "c780603a-b482-40a3-85e9-cac1e30dfe40",
               "value": "video",
               "name": "video"
+            },
+            {
+              "_uid": "4db12392-615a-4fca-9122-25bc264859c2",
+              "value": "none",
+              "name": "none"
             }
           ],
           "id": "H--IAghxSGOGGMX7078gPA"
