--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-intl": "^3.26.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "reset-css": "^5.0.2",
     "sass": "^1.85.0",
     "storyblok-rich-text-react-renderer": "^2.9.2"
